@@ -220,6 +220,11 @@ Boost V1.34.0
 - Added a couple of new test cases to verify various diagnostics.
 - Fixed wave applet not to report missing #endif's when in interactive mode.
 - Cleaned up the Re2C lexer code.
+- Fixed a bug, where a empty line followed by an arbitrary token and followed 
+  by a preprocessing directive interpreted the preprcessing directive as if it
+  were the first non-whitespace token on the line. This error occured only
+  if the #line directive generation was suppressed. Thanks to Joan Grant for
+  reporting this problem.
 
 Sat Feb 18 2005
 - Version 1.2.3
